[package]
name = "yt-cli"
version = "0.1.0"
authors = ["lkucharczyk <lkucharczyk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
configparser = "2.0"
getopts = "0.2"
home = "0.5"
json = "0.12"
lazy_static = "1.4"
reqwest = { version = "0.11", features = [ "blocking" ] }
signal = "0.7"
skim = "0.9"
